@@ -950,6 +950,12 @@ AS_IF([! $arch64],
   [AS_CASE([$ocaml_cv_cc_vendor],
     [gcc-*], [cclibs="$cclibs -latomic"])])
 
+# Support for C11 atomic types
+
+OCAML_CC_SUPPORTS_ATOMIC([$cclibs])
+AS_IF([! $cc_supports_atomic],
+  [AC_MSG_FAILURE([C11 atomic support is required, use another C compiler])])
+
 # Shared library support
 
 sharedlib_cflags=''
